<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.eggs.MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:lines="2"
        android:text="@string/five_ways"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageButton
        android:onClick="hardboiled"
        android:background="#FFFFFF"
        android:id="@+id/imageHardboiled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="6dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:src="@drawable/hardboiled" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:text="@string/hardboiled"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:onClick="fried"
                android:background="#FFFFFF"
                android:id="@+id/imageFried"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:src="@drawable/fried" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/fried"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:onClick="poached"
                android:background="#FFFFFF"
                android:id="@+id/imagePoached"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="6dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:src="@drawable/poached" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/poached"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:onClick="scrambled"
                android:background="#FFFFFF"
                android:id="@+id/imageScrambled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="6dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:src="@drawable/scrambled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/scrambled"
                android:textSize="20sp"
                android:textStyle="bold" />


            <ImageButton
                android:onClick="omelet"
                android:background="#FFFFFF"
                android:id="@+id/imageOmelet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="6dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="24dp"
                android:src="@drawable/omelet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/omelet"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
